core/overlays/garu-home/links/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: garu-io-links
  namespace: garu-links
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/configuration-snippet: |
         rewrite /ig https://www.instagram.com/garupolitics;
         rewrite /cv https://my.visualcv.com/tommaso-garuglieri;
spec:
  ingressClassName: nginx
  rules:
    - host: "garu.io"
      http:
        paths:
          - path: /cv
            pathType: Exact
            backend:
              service:
                name: garu-io
                port:
                  number: 80
          - path: /ig
            pathType: Exact
            backend:
              service:
                name: garu-io
                port:
                  number: 80
  tls:
    - hosts:
        - garu.io
      secretName: garu-io-cert
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: garu-io-iot
  namespace: garu-links
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
    - host: "iot.garu.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: garu-io-iot
                port:
                  number: 8123
  tls:
    - hosts:
        - iot.garu.io
      secretName: garu-io-iot-cert
---
kind: Service
apiVersion: v1
metadata:
  name: garu-io-iot
  namespace: garu-links
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8123
      targetPort: 8123
---
kind: Endpoints
apiVersion: v1
metadata:
  name: garu-io-iot
  namespace: garu-links
subsets:
  - addresses:
      - ip: 192.168.1.4
    ports:
      - port: 8123
---
